// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`strategy > babel json strategy merge JSON configs should handle unique env cases during merging 1`] = `
Object {
  "env": Object {
    "test": Object {
      "presets": Array [
        "env",
      ],
    },
  },
}
`;

exports[`strategy > babel json strategy merge JSON configs should handle unique env cases during merging 2`] = `
Object {
  "env": Object {
    "test": Object {
      "presets": Array [
        "env",
      ],
    },
  },
}
`;

exports[`strategy > babel json strategy merge JSON configs should handle unique env cases during merging 3`] = `
Object {
  "env": Object {
    "development": Object {
      "presets": Array [
        "stage-2",
      ],
    },
    "test": Object {
      "presets": Array [
        "env",
      ],
    },
  },
}
`;

exports[`strategy > babel json strategy merge JSON configs should handle unique env cases during merging 4`] = `
Object {
  "env": Object {
    "development": Object {
      "presets": Array [
        "stage-2",
      ],
    },
    "test": Object {
      "presets": Array [
        "env",
      ],
    },
  },
}
`;

exports[`strategy > babel json strategy merge JSON configs should merge babel json configs 1`] = `
Object {
  "env": Object {
    "test": Object {
      "plugins": Array [
        "dynamic-import-node",
      ],
      "presets": Array [
        "env",
        "stage-2",
      ],
    },
  },
  "ignore": Array [
    "*.babelrc",
  ],
  "plugins": Array [
    Array [
      "syntax-dynamic-import",
      Object {
        "foo": "bar",
      },
    ],
    "lodash",
  ],
  "presets": Array [
    Array [
      "env",
      Object {
        "modules": false,
        "targets": Object {
          "browsers": Array [
            "> 1%",
            "last 2 versions",
            "not ie > 0",
          ],
        },
      },
    ],
    "stage-2",
  ],
}
`;

exports[`strategy > babel json strategy unapply JSON should fully unapply babel JSON config 1`] = `
Object {
  "env": Object {
    "test": Object {
      "presets": Array [
        "stage-2",
      ],
    },
  },
  "plugins": Array [
    Array [
      "syntax-dynamic-import",
      Object {
        "foo": "bar",
      },
    ],
  ],
  "presets": Array [
    Array [
      "env",
      Object {
        "modules": false,
        "targets": Object {
          "browsers": Array [
            "> 1%",
            "last 2 versions",
            "not ie > 10",
            "not ie > 0",
          ],
        },
      },
    ],
  ],
}
`;

exports[`strategy > babel json strategy unapply JSON should unapply babel JSON config 1`] = `
Object {
  "env": Object {
    "test": Object {
      "presets": Array [
        "stage-3",
      ],
    },
  },
  "plugins": Array [
    Array [
      "syntax-dynamic-import",
      Object {
        "foo": "baz",
      },
    ],
  ],
  "presets": Array [
    Array [
      "env",
      Object {
        "modules": false,
        "targets": Object {
          "browsers": Array [
            "> 1%",
            "last 2 versions",
            "not ie > 0",
          ],
        },
      },
    ],
  ],
}
`;

exports[`strategy > babel json strategy unapply JSON should unapply babel config by file 1`] = `
Object {
  "env": Object {
    "test": Object {
      "presets": Array [
        "stage-3",
      ],
    },
  },
  "plugins": Array [
    Array [
      "syntax-dynamic-import",
      Object {
        "foo": "baz",
      },
    ],
  ],
  "presets": Array [
    Array [
      "env",
      Object {
        "modules": false,
        "targets": Object {
          "browsers": Array [
            "> 1%",
            "last 2 versions",
            "not ie > 0",
          ],
        },
      },
    ],
  ],
}
`;
